redirect to buoy page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
-<body>
-<h1>Hello World!</h1>
-<p> PlattsBuoy!</p>
-</body>
+<head>
+<meta http-equiv="refresh" content="0; URL='http://leibensperger.github.io/buoy.html'" />
+</head>
 </html>
